--- a/ui/src/index.scss
+++ b/ui/src/index.scss
@@ -1,2 +1,6 @@
-
+:root {
+  --background-validation-A_VALIDER: #FEF5E8;
+  --background-validation-INCONNUES: #FEF4F2;
+  --background-validation-VALIDEES: #E3FDEB;
+}
 
