--- a/ui/src/xfr.scss
+++ b/ui/src/xfr.scss
@@ -19,6 +19,10 @@ Custom DSFR classes.
   --color-box-background-hover: #E4E3E1;
 }
 
+.xfr-display-inline-block {
+  display: inline-block;
+}
+
 .xfr-display-none {
   display: none;
 }
